# reaver

./: .gitignore  CODE_OF_CONFLICT.md  README.md  flake.nix  plan-assembler.cabal  wisp.cabal
doc/: reaver.md
editor/plan-vim/ftdetect/: plan.vim
editor/plan-vim/ftplugin/: plan.vim
editor/plan-vim/indent/: plan.vim
editor/plan-vim/syntax/: plan.vim
editor/wisp-vim/ftdetect/: wisp.vim
editor/wisp-vim/ftplugin/: wisp.vim
editor/wisp-vim/indent/: wisp.vim
editor/wisp-vim/syntax/: wisp.vim
note/: case_op.md  scheme.md
note/arch/: bootstrap.md  bplan.md  effects.md
note/assembler/: import.md
note/sketch/: load-wisp-from-reaver.md  pinhash.md  plan-js-minimal-impl.md  plan-value-ordering.md  serialize.md  simple-c-bytecode-impl.md
note/snapshot/: rollback.md
note/wisp/: import.md
scratch/wisp-in-c/: README.md  wisp.c
src/hs/: Main.hs  Plan.hs  PlanAssembler.hs  Print.hs  Repl.hs  ReplMain.hs  Types.hs  Wisp.hs
src/plan/: boot.plan  bst.plan  codegen.plan  data0.plan  env.plan  global.plan  inline.plan  lambda.plan  pretty.plan  pure.plan  raw.plan  read.plan  reaver-tests.plan  reaver.plan  reaver0.plan  repl.plan  riv.plan  silly.plan  stdlib.plan  wisp.plan  wplan-test.plan
src/reaver/: actor-demo.rvr  app-todo.rvr  badcode.rvr  bplan.rvr  http-demo.rvr  quasi.rvr  scratch.rvr  std.rvr  stdlib.rvr  test-badlex.rvr  test-scratch.rvr  test.rvr  todo-quasi.rvr  todo.rvr
x/: all  reaver  reaver-repl  reaver-reset
