cabal-version: 2.4
name:          plan-assembler
version:       0.1.0.0
license:       MIT
license-file:  LICENSE

executable plan-assembler
  main-is:          Main.hs
  hs-source-dirs:   src/hs
  default-language: Haskell2010
  ghc-options:      -O2

  default-extensions:
      BangPatterns
    , BlockArguments
    , DeriveAnyClass
    , DeriveFoldable
    , DeriveFunctor
    , DeriveGeneric
    , DeriveTraversable
    , LambdaCase
    , MagicHash
    , OverloadedStrings
    , ViewPatterns
    , ScopedTypeVariables
    , TypeApplications
    , ConstraintKinds
    , ImplicitParams
    , RankNTypes

  other-modules:
      Types
    , Print
    , Plan
    , PlanAssembler

  build-depends:
      base
    , vector
    , bytestring
    , base58-bytestring
    , containers
    , deepseq
    , directory
    , filepath
    , time
    , cryptohash-sha256
    , network

executable plan-repl
  main-is:          ReplMain.hs
  hs-source-dirs:   src/hs
  default-language: Haskell2010
  ghc-options:      -O2

  default-extensions:
      BangPatterns
    , BlockArguments
    , DeriveAnyClass
    , DeriveFoldable
    , DeriveFunctor
    , DeriveGeneric
    , DeriveTraversable
    , LambdaCase
    , MagicHash
    , OverloadedStrings
    , ViewPatterns
    , ScopedTypeVariables
    , TypeApplications
    , ConstraintKinds
    , ImplicitParams
    , RankNTypes

  other-modules:
      Types
    , Print
    , Plan
    , PlanAssembler
    , Repl

  build-depends:
      base
    , vector
    , bytestring
    , base58-bytestring
    , containers
    , deepseq
    , directory
    , filepath
    , time
    , cryptohash-sha256
    , network
